# Task-manager

./: .dockerignore  .gitignore  README.md  dockerfile  pyproject.toml  run_front.bat
api/: admin.py  serializers.py  urls.py
api/auth/: __init__.py
api/models/: __init__.py  board.py  folder.py  tags.py  to-do_item.py  todo_item.py  user.py
api/views/: auth.py  board.py  user.py
front_end/: package-lock.json  package.json
front_end/src/: App.css  App.js  index.js
front_end/src/components/: home.js  main.js
front_end/src/components/board/: board.css  board.js  card.js  folder.js  todoItem.js
front_end/src/components/login/: login.css  login.js
front_end/src/components/logout/: logout.js
front_end/src/components/signup/: signup.css  signup.js
test_project/: settings.py  urls.py
trello2/: apps.py
