[tool.poetry]
name = "test_project"
version = "0.1.0"
description = ""
authors = ["Ramiro Luengo"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.1"
black = "^21.12b0"
pre-commit = "^2.17.0"
jsonfield = "^3.1.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
